# alphazero-tetris

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: static.yml
alphazero_tetris/: base.py  collect.py  config.py  debug.py  device.py  eval.py  mcts.py  network.py  policies.py  replay_buffer.py  visualize.py
alphazero_tetris/run/: examine.py  timediff.py  train.py  viewer.html
